[tool.poetry]
name = "primitive-db"
version = "0.1.0"
description = "Учебный проект: примитивная база данных на JSON с CRUD, декораторами и кэшем."
authors = ["Student <student@example.com>"]
readme = "README.md"
packages = [{ include = "primitive_db", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
prompt = ">=0.4.1,<1.0.0"
prettytable = ">=3.9.0,<4.0.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.6.0,<1.0.0"

[tool.poetry.scripts]
database = "primitive_db.main:main"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__", "data"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
